--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 MyNotes.xcodeproj/xcuserdata/yangyihui.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 
 MyNotes.xcodeproj/xcuserdata/yangyihui.xcuserdatad/xcschemes/xcschememanagement.plist
+
+*.xccheckout
